<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.detail.DetailUserActivity">


  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/btn_back"
      style="@style/TextAppearance.MaterialComponents.Button"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:background="@color/secondary"
      android:gravity="center"
      android:padding="6dp"
      android:src="@drawable/ic_round_arrow_back_24"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="SpeakableTextPresentCheck"
      android:contentDescription="@string/back_button" />

    <TextView
      android:id="@+id/tv_detail_username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/btn_back"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.045"
      app:layout_constraintStart_toEndOf="@+id/btn_back"
      app:layout_constraintTop_toTopOf="@+id/btn_back"
      tools:text="Username" />

    <ImageView
      android:id="@+id/iv_detail_avatar"
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:layout_marginTop="76dp"
      android:contentDescription="@string/avatar_user"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:srcCompat="@tools:sample/avatars" />

    <TextView
      android:id="@+id/tv_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:textSize="22sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/iv_detail_avatar"
      app:layout_constraintStart_toStartOf="@+id/iv_detail_avatar"
      app:layout_constraintTop_toBottomOf="@+id/iv_detail_avatar"
      tools:text="Name" />


    <TextView
      android:id="@+id/tv_company"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:drawablePadding="8dp"
      android:gravity="center_vertical"
      android:textSize="14sp"
      app:drawableStartCompat="@drawable/ic_round_work_24"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_name"
      tools:text="Company" />

    <TextView
      android:id="@+id/tv_location"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:drawablePadding="8dp"
      android:gravity="center_vertical"
      android:textSize="14sp"
      app:drawableStartCompat="@drawable/ic_round_location_city_24"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_company"
      tools:text="Location" />

    <TextView
      android:id="@+id/tv_repos"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:drawablePadding="8dp"
      android:gravity="center_vertical"
      app:drawableStartCompat="@drawable/ic_round_code_24"
      app:layout_constraintBottom_toTopOf="@id/linear_layout"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_location"
      tools:text="10 Repository" />

    <LinearLayout
      android:id="@+id/linear_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintTop_toBottomOf="@id/tv_repos">

      <TextView
        android:id="@+id/tv_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:drawableStartCompat="@drawable/ic_people"
        tools:text="10 Followers" />

      <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10 Following" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabs"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="@color/secondary"
      app:layout_constraintTop_toBottomOf="@id/linear_layout"
      app:tabTextColor="@color/primary" />

    <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/view_pager"
      android:layout_width="match_parent"
      android:layout_height="300dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tabs"
      tools:listitem="@layout/item_row_user" />

    <androidx.cardview.widget.CardView
      android:id="@+id/loading"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:visibility="gone"
      app:cardCornerRadius="10dp"
      app:cardElevation="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.32">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="100dp">

        <ProgressBar
          android:id="@+id/progressBar3"
          style="@style/Widget.AppCompat.ProgressBar"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/loading_text"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="@+id/progressBar3"
          app:layout_constraintStart_toStartOf="@+id/progressBar3"
          app:layout_constraintTop_toBottomOf="@id/progressBar3" />
      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ToggleButton
      android:id="@+id/toggle_favorite"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:background="@drawable/favorite_toggle"
      android:textOff=""
      android:textOn=""
      android:focusable="false"
      android:focusableInTouchMode="false"
      app:layout_constraintBottom_toBottomOf="@+id/tv_detail_username"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.9"
      app:layout_constraintStart_toEndOf="@+id/tv_detail_username"
      app:layout_constraintTop_toTopOf="@+id/tv_detail_username" />


  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
